# PersonalJarvis

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  .tmp_noconsole_result.txt  AGENTS.md  CHANGELOG.md  CLAUDE.md  CLOUD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TRADEMARK.md  Unbenanntes Dokument (10).md  Unbenanntes Dokument (7).md  Unbenanntes Dokument (8).md  Unbenanntes Dokument (9).md  boot-progress.md  build.bat  build.sh  codex-realtime-duplicate-response-event.md  codex-realtime-transcript-guarantee.md  conftest.py  desktop-ttu-baseline.json  desktop-ttu-latest.json  dev.bat  docker-compose.yml  install.sh  jarvis.spec  jarvis.toml.example  mcp.json.example  pyproject.toml  reporttutorialpickupprompt (1).md  requirements.in  requirements.txt  (+15 more)
.agents/: README.md
.codex/: hooks.json
.githooks/: pre-commit  pre-push
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.tmp_pytest/: wsl_vosk_verify.sh
.tmp_research/: vision_latency_probe.py
OS-Level/: OS-LEVEL_PLAN.md  QUICKSTART.md  README.md  pyproject.toml  test-overlay.bat
OS-Level/overlay-ui/: edge-glow.html  index.html  mascot.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
OS-Level/overlay-ui/src/: bridge.ts  schema.ts  vite-env.d.ts
OS-Level/overlay-ui/src/edge-glow/: cursor-trail-worker.ts  cursor-trail.ts  edge-glow.css  glow.ts  main.ts  noise.ts  ripple.ts  typing-sweep.ts
OS-Level/overlay-ui/src/mascot/: main.ts  mascot.css
OS-Level/src/overlay/: __init__.py  __main__.py  config.py  cursor_shm.py  event_router.py  fullscreen_detect.py  ipc_pipe.py  ipc_ws.py  main.py  mascot_position.py  monitors.py  power.py  schema.py  self_test.py  state.py  throttler.py  transparency.py  window_glow.py  window_mascot.py
board-backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
board-backend/board_backend/: __init__.py  auth.py  background.py  config.py  crypto.py  db.py  main.py  models.py  rate_limit.py  schemas.py
board-backend/board_backend/routes/: activity.py  forget_me.py  health.py  identity.py  me.py  pair.py  reactions.py  sync.py
board-backend/tests/: conftest.py  test_activity.py  test_crypto.py  test_pair.py  test_phase_d_gaps.py  test_reactions_forget.py  test_routes.py  test_skeleton.py
conductor/: __init__.py  __main__.py  cli.py
docs/: BRAND.md  BUGS-AUDIT-2026-05-16.html  BUGS.md  JARVIS_AGENTS_HARDENING_REPORT_2026-05-27.md  LLM-CONTEXT.md  PHILOSOPHY.md  PROJEKT_UEBERBLICK.md  README-desktop-black-screen.md  SINGLE-SOURCE-OF-TRUTH.md  SUBAGENT_HARDENING_REPORT_2026-05-27.md  agents-self-verification.md  anti-drift-three-layer.md  architecture-overview.md  bug-019-spawn-failure-report.html  commands-reference.md  computer-use.md  deepgram-stt-research-2026-05-20.md  device-parity-debugging.md  jarvis-agents-bridge.md  jarvis-agents-spawn-failure-analysis-2026-05-18.md  jarvis-cli-reference.md  jarvis-cli.md  jarvis-control-api.md  jarvisctl.md  latency-deep-dive.md  obsidian-setup.md  openclaw-bridge.md  openclaw-spawn-failure-analysis-2026-05-18.md  os-parity.md  overlay-ipc-protocol.md  overlay-state-machine.md  overlay-troubleshooting.md  persona-audit-report.md  persona-refactor-results.md  persona-research.md  phase1a-verify.md  phase1c-review-report.md  phase1c-test-results.md  phase2-integration-test-results.md  phase4-integration-test-results.md  (+16 more)
install/: README.md  TRUST_ROOT.md  install-verify.ps1  install-verify.sh  install.ps1  install.sh  installer.py  uninstall.ps1  uninstall.sh
jarvis/: __init__.py  __main__.py  agent_cli_probe.py  api_family_quota_state.py  claude_auth.py  claude_auth_state.py  claude_credentials.py  claude_quota_state.py  codex_auth.py  codex_auth_state.py  codex_quota_state.py
keyproxy/: .dockerignore  Dockerfile  README.md  __init__.py  __main__.py  admin.py  app.py  cli.py  config.py  passthrough.py  requirements.txt  schema.sql  store.py  tokens.py  usage.py  vendors.py
packaging/: README.md
scoop-bucket/: personal-jarvis-installer.json
scripts/: README-auto-push.md  _build_excalidraw_jarvis.py  _capture_obsidian_printwindow.py  _cu_bench_healthcheck.py  _desktop_boot_driver.py  _e2e_jarvis_agent_verify.py  _final_live_verdict.py  _final_validate_1_dispatch.py  (+114 more)
skillbook/: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  conftest.py  pyproject.toml
skillbook/docs/adr/: 0001-repo-layout-and-toolchain.md  0002-sqlite-storage.md  0003-embeddings-strategy.md  0004-llm-provider-strategy.md  0005-mqtt-stack.md  0006-p2p-transport.md  0007-reflector-sandbox.md  0008-guardrails-taxonomy.md  0009-survey-deviations.md  0010-extract-test-doubles.md
skillbook/docs/audits/: AUDIT.md  FORENSICS.md  README.md
skillbook/src/skillbook/: __init__.py  agent.py  errors.py
skillbook/src/skillbook/ace_core/: __init__.py  curator.py  generator.py  llm.py  models.py  reflector.py
skillbook/src/skillbook/guardrails/: __init__.py  diagnostics.py  lats.py  mcts.py
skillbook/src/skillbook/memory_layer/: __init__.py  embedder.py  models.py  store.py
skillbook/src/skillbook/p2p_sync/: __init__.py  bloom.py  crdt.py  engine.py  tcp_transport.py  transport.py
skillbook/src/skillbook/symcon_bridge/: __init__.py  actor.py  jsonrpc.py  mqtt.py
skillbook/tests/: test_capstone.py  test_capstone_tcp.py  test_no_mocks_in_production.py
skillbook/tests/fakes/: llm.py  symcon.py  transport.py
skillbook/tests/live/: test_live_llm.py
skillbook/tests/unit/ace_core/: test_curator.py  test_generator.py  test_generator_kg.py  test_generator_mcts.py  test_llm_routing.py  test_reflector.py
skillbook/tests/unit/guardrails/: test_diagnostics.py  test_lats.py  test_lats_search.py  test_mcts.py
skillbook/tests/unit/memory_layer/: test_embedder.py  test_store.py
skillbook/tests/unit/p2p_sync/: test_asyncio_tcp_transport.py  test_bloom.py  test_crdt.py  test_engine.py  test_engine_v2_bloom.py  test_transport.py
skillbook/tests/unit/symcon_bridge/: test_actor.py  test_jsonrpc.py  test_mqtt.py
(+3672 files in other folders)
